docx: 項目修正 課題 -> 担当業務

--- a/_posts/2020-09-27-project_201804_201809.md
+++ b/_posts/2020-09-27-project_201804_201809.md
@@ -26,8 +26,8 @@ comments: true
 * Windows
 * VisualStudio2016
 
-### 課題
-* 以下の画面設計及びテスト
+### 担当業務
+* 以下の画面設計及びテストコード作成
 * 修正銘柄時価額設定機能
 * 修正銘柄時価額集計機能
 * 予想配当金設定機能
