--- a/_posts/2020-09-27-project_201810_201909.md
+++ b/_posts/2020-09-27-project_201810_201909.md
@@ -24,19 +24,14 @@ comments: true
 * VB.net
 * Oracle11g
 
-
 ### 開発環境 （OSなど）
 * Windows
 * Linux
 * VisualStudio2016
+* Toraja
 
-### 課題
+### 担当業務
 サバアップグレードによる、既存プログラムやバッチ処理、DBなどのバージョンアップを担当しました。
 データ算出プログラム‘WebFocus’の老朽化に対して対応しました。
 社内イントラネットサーバー‘Toraja’の監視・設定・管理を担当しました。
 特に‘WebFocus’の場合、ユーザー専用のマニュアル作成やユーザーサポーターを担当しました。
-
-### 開発図
-
-
-
