docx: 項目修正、担当業務追加

--- a/_posts/2020-09-27-project_201910_202002.md
+++ b/_posts/2020-09-27-project_201910_202002.md
@@ -26,21 +26,21 @@ comments: true
 * AWS Dynamodb
 * AWS SES
 * AWS StepFunctions
-* Oracle11g
-
 
 ### 開発環境 （OSなど）
-* Windows
+* Windows10
 * Linux
 * VisualStudioCode
 
-### 課題
-サバアップグレードによる、既存プログラムやバッチ処理、DBなどのバージョンアップを担当しました。
-データ算出プログラム‘WebFocus’の老朽化に対して対応しました。
-社内イントラネットサーバー‘Toraja’の監視・設定・管理を担当しました。
-特に‘WebFocus’の場合、ユーザー専用のマニュアル作成やユーザーサポーターを担当しました。
+### 担当業務
+* ビックデータ変換処理lambda開発（データフィルタリング）
+* SESアラーム設定機能開発
+* lambdaバッチ処理開発（StepFunctions）
 
 ### 開発図
+<figure class="middle">
+	<img src="..\assets\img\project_201910_202002.png">
+</figure>
 
 
 
