feat : 한국어 번역본

--- a/_posts/2020-09-27-project_201810_201909.md
+++ b/_posts/2020-09-27-project_201810_201909.md
@@ -1,37 +1,37 @@
 ---
-layout: post
-title:  "サーバアップグレード対応"
-date:   2020-09-27
-excerpt: ""
-project: true
-tag:
+layout : post
+title: "서버 업그레이드 지원"
+date : 2020 - 09 - 27
+excerpt : ""
+project : true
+tag :
 - project
-comments: true
+comments : true
 ---
 
-### 開発期間
-* 2018.10~ 2019.09 (約 12ヶ月)
+### 개발 기간
+* 2018.10 ~ 2019.09 (약 12개월)
 
-### 所属機関
-*  (株）JDI
+### 소속기관
+* ㈜제이디
 
-### 担当分野
+### 담당 분야
 * SW Engineer
 
-### 使用技術
+## 사용 기술
 * WebFocus
 * Sonar
 * VB.net
-* Oracle11g
+* Oracle 11g
 
-### 開発環境 （OSなど）
+### 개발환경 (OS 등)
 * Windows
 * Linux
-* VisualStudio2016
+* VisualStudio 2016
 * Toraja
 
-### 担当業務
-サバアップグレードによる、既存プログラムやバッチ処理、DBなどのバージョンアップを担当しました。
-データ算出プログラム‘WebFocus’の老朽化に対して対応しました。
-社内イントラネットサーバー‘Toraja’の監視・設定・管理を担当しました。
-特に‘WebFocus’の場合、ユーザー専用のマニュアル作成やユーザーサポーターを担当しました。
+### 담당 업무
+서버 업그레이드를 위한 기존 프로그램과 배치 처리, DB 등의 버전 업을 담당했습니다.
+데이터 산출 프로그램 'WebFocus'의 노후화에 대응하였습니다.
+데이터 감시 서버 'Toraja'의 감시·설정·관리를 담당했습니다.
+특히 'WebFocus'의 경우 사용자 전용 매뉴얼 작성 및 사용자 서포터를 담당하였습니다.
