--- a/_posts/2020-09-27-project_201910_202002.md
+++ b/_posts/2020-09-27-project_201910_202002.md
@@ -1,24 +1,24 @@
 ---
-layout: post
-title:  "ビックデータ処理対応"
-date:   2020-09-27
-excerpt: ""
-project: true
-tag:
+layout : post
+title: "빅데이터 처리 지원"
+date : 2020 - 09 - 27
+excerpt : ""
+project : true
+tag :
 - project
-comments: true
+comments : true
 ---
 
-### 開発期間
-* 2019.10~ 2020.02 (約 5ヶ月)
+### 개발 기간
+* 2019.10 ~ 2020.02 (약 5개월)
 
-### 所属機関
-*  (株）シーイーシー
+### 소속기관
+* CEC
 
-### 担当分野
+### 담당 분야
 * SW Engineer
 
-### 使用技術
+## 사용 기술
 * Node.js
 * Python
 * AWS Lambda
@@ -27,17 +27,17 @@ comments: true
 * AWS SES
 * AWS StepFunctions
 
-### 開発環境 （OSなど）
-* Windows10
+### 개발환경 (OS 등)
+* Windows 10
 * Linux
 * VisualStudioCode
 
-### 担当業務
-* ビックデータ変換処理lambda開発（データフィルタリング）
-* SESアラーム設定機能開発
-* lambdaバッチ処理開発（StepFunctions）
+### 담당 업무
+* 빅 데이터 에러 알람 lambda 개발(데이터 필터링)
+* SES 빅데이터 보고 시스템 개발
+* lambda 배치 처리 개발(StepFunctions)
 
-### 開発図
+## 개발도
 <figure class="middle">
 	<img src="..\assets\img\project_201910_202002.png">
 </figure>
