--- a/_posts/2020-09-27-project_201804_201809.md
+++ b/_posts/2020-09-27-project_201804_201809.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "証券取引所向け指数集計算出システム開発"
+title:  "증권거래소용 지수 집계 산출 시스템 개발"
 date:   2020-09-27
 excerpt: ""
 project: true
@@ -9,26 +9,26 @@ tag:
 comments: true
 ---
 
-### 開発期間
-* 2018.04 ~ 2018.09 (約 6ヶ月)
+### 개발 기간
+* 2018.04 ~ 2018.09 (약 6개월)
 
-### 所属機関
-*  (株）日立製作所
+### 소속기관
+* 히타치 제작소
 
-### 担当分野
+### 담당 분야
 * SW Engineer
 
-### 使用技術
-* VB.NET
+## 사용 기술
+* VB . NET
 * HiRDB
 
-### 開発環境 （OSなど）
+### 개발환경 (OS 등)
 * Windows
-* VisualStudio2016
+* VisualStudio 2016
 
-### 担当業務
-* 以下の画面設計及びテストコード作成
-* 修正銘柄時価額設定機能
-* 修正銘柄時価額集計機能
-* 予想配当金設定機能
+### 담당 업무
+* 아래의 화면 설계 및 테스트 코드 작성
+* 수정 종목 시가액 설정 기능
+* 수정 종목 시가액 집계 기능
+* 예상 배당금 설정 기능
 
