feat: date type error

--- a/_posts/2020-09-27-project_201810_201909.md
+++ b/_posts/2020-09-27-project_201810_201909.md
@@ -1,7 +1,7 @@
 ---
 layout : post
-title: "서버 업그레이드 지원"
-date : 2020 - 09 - 27
+title: "서버 업그레이드 및 데이터 관리시스템 개발"
+date : 2020-09-27
 excerpt : ""
 project : true
 tag :
@@ -13,7 +13,7 @@ comments : true
 * 2018.10 ~ 2019.09 (약 12개월)
 
 ### 소속기관
-* ㈜제이디
+* JDI
 
 ### 담당 분야
 * SW Engineer
