feat : 포스팅 설명 추가

--- a/_posts/2020-09-27-project_201810_201909.md
+++ b/_posts/2020-09-27-project_201810_201909.md
@@ -2,7 +2,7 @@
 layout : post
 title: "서버 업그레이드 및 데이터 관리시스템 개발"
 date : 2020-09-27
-excerpt : ""
+excerpt : "기간(2018.10 ~ 2019.09) 자동화 공장의 데이터 처리 및 서버 업그레이드 대응"
 project : true
 tag :
 - project
