--- a/_posts/2020-09-27-project_201910_202002.md
+++ b/_posts/2020-09-27-project_201910_202002.md
@@ -1,8 +1,8 @@
 ---
 layout : post
-title: "빅데이터 처리 지원"
+title: "AWS기반 빅데이터 처리 프로젝트"
 date : 2020-09-27
-excerpt : ""
+excerpt : "기간(2019.10 ~ 2020.02) AWS기반 lambda등 빅데이터 에러체크, 카운팅 보고시스템 개발"
 project : true
 tag :
 - project
@@ -39,7 +39,7 @@ comments : true
 
 ## 개발도
 <figure class="middle">
-	<img src="..\assets\img\project_201910_202002.png">
+	<img src="..\assets\img\2020-09-27-project_201910_202002.png">
 </figure>
 
 
