--- a/_posts/2020-09-27-project_201804_201809.md
+++ b/_posts/2020-09-27-project_201804_201809.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "증권거래소용 지수 집계 산출 시스템 개발"
 date:   2020-09-27
-excerpt: ""
+excerpt: "기간(2018.04 ~ 2018.09) 도쿄증권거래소 데이터 처리 프로그램 개발"
 project: true
 tag:
 - project
