feat : -> 프로젝트 구성도

--- a/_posts/2020-09-27-project_201910_202002.md
+++ b/_posts/2020-09-27-project_201910_202002.md
@@ -37,7 +37,7 @@ comments : true
 * SES 빅데이터 보고 시스템 개발
 * lambda 배치 처리 개발(StepFunctions)
 
-## 개발도
+## 프로젝트 구성도
 <figure class="middle">
 	<img src="..\assets\img\2020-09-27-project_201910_202002.png">
 </figure>
